55 docs: add troubleshooting section